# object_detection_using_cga

./: README.MD
GUI Program/RansacGAqt/: README.md
GUI Program/RansacGAqt/snapshots_robot_cell/cam1/: sd_1.pcd
GUI Program/RansacGAqt/snapshots_robot_cell/cam2/: transformed2.pcd
GUI Program/RansacGAqt/snapshots_robot_cell/cam3/: transformed3.pcd
GUI Program/RansacGAqt/ui/: pclviewer.ui
GUI_Program/RansacGAqt/: CMakeLists.txt
GUI_Program/RansacGAqt/include/: pclviewer.h
GUI_Program/RansacGAqt/snapshots_robot_cell/cam1/: transformed1.pcd
GUI_Program/RansacGAqt/snapshots_robot_cell/cam2/: sd_1.pcd
GUI_Program/RansacGAqt/snapshots_robot_cell/cam3/: sd_1.pcd
GUI_Program/RansacGAqt/src/: main.cpp
GUI_Program/RansacGAqt/src/window/: pclviewer.cpp
Objects_and_RANSAC_source_code/include/: ransac.h
Objects_and_RANSAC_source_code/src/: objects_body.cpp  ransac_body.cpp
example/: CMakeLists.txt  README.MD  main  main.cpp  result
